api/infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
	name: auth-depl
spec:
	replicas: 1
   	selector:
      matchLabels:
        app: auth
   	template:
      metadata:
        labels:
          app: auth
      spec:
        containers:
          - name: auth
            image: tannero/auth
---
apiVersion: v1
kind: Service
metadata:
   	name: auth-clusterip-svc
spec:
   	type: ClusterIP
   	selector:
      app: auth
   	ports:
      - name: auth
        port: 5000
        protocol: TCP
        targetPort: 5000
