api/infra/k8s/event-bus-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-mongo
  template:
    metadata:
      labels:
        app: events-mongo
    spec:
      containers:
        - name: events-mongo
          image: mongo
---
apiVetrsion: v1
kind: Service
metadata:
  name: events-mongo-srv
spec:
    selector:
      app:
        events-mongo
      ports:
        - name: events-db
          protocol: TCP
          port: 27017
          targetPort: 27017
