api/infra/k8s/moderate-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: tannero/moderation:latest
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      port: 4003
      protocol: TCP
      targetPort: 4003
