api/infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: tannero/orders

---
apiVersion: v1
kind: Service
metadata:
  name: orders-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - name: orders
      port: 4000
      protocol: TCP
      targetPort: 4000
