api/infra/k8s/orders-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-nodeport-svc
spec:
  type: NodePort
  selector:
    app: orders
  ports:
    - name: orders
      port: 4000
      protocol: TCP
      targetPort: 4000
# DEVELOPMENT ONLY
