api/infra/k8s/payments-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-mongo
  template:
    metadata:
      labels:
        app: payments-mongo
    spec:
      containers:
        - name: payments-mongo
          image: tannero/payments-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: payments-mongo-svc
spec:
  selector:
    app: payments-mongo
  ports:
    - name: payments-mongo
      port: 27017
      protocol: TCP
      targetPort: 27017
