api/infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: tannero/tickets:latest
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: tickets
  ports:
    - name: tickets
      port: 4001
      protocol: TCP
      targetPort: 4001
