api/infra/k8s/tickets-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets-nodeport-svc
spec:
  type: NodePort
  selector:
    app: tickets
  ports:
    - name: orders
      port: 4001
      protocol: TCP
      targetPort: 4001
# DEVELOPMENT ONLY
