api/infra/k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
rules:
- host: ticketingwblt.com
  http:
    paths:
    - path: /auth
      pathType: Exact
      backend:
        serviceName: auth-clusterip-svc
        servicePort: 5000
    - path: /?(.*)
      backend:
        serviceName: client-clusterip-svc
        servicePort: 3000
    - path: /orders
      pathType: Exact
      backend:
        serviceName: query-clusterip-svc
        servicePort: 3500
    - path: /orders/create
      backend:
        serviceName: orders-clusterip-svc
        servicePort: 4000
    - path: /tickets
      backend:
        serviceName: tickets-clusterip-svc
        servicePort: 4001
    - path: /payments
      backend:
        serviceName: payments-clusterip-svc
        servicePort: 4002
    - path: /expiration
      backend:
        serviceName: moderate-clusterip-svc
        servicePort: 4003
